# termprofile

./: CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  cliff.toml  deny.toml  typos.toml
.github/workflows/: ci.yml
examples/: 256_all.rs  ci.rs  convert.rs  detect.rs  override.rs  ratatui_app.rs  subprocess_force.rs
src/: ansi_256_to_16.rs  color.rs  convert.rs  convert_test.rs  dcs.rs  detect.rs  detect_test.rs  lib.rs  main.rs  query.rs
src/convert/: adapt.rs  ansi_256_to_rgb.rs  color.rs  convert_test.rs  mod.rs  ratatui.rs  ratatui_test.rs
