[package]
name = "termprofile"
version = "0.1.0"
edition = "2024"

[dependencies]
anstyle = { version = "1", optional = true }
palette = { version = "0.7", optional = true, default-features = false, features = [
  "std",
] }
termini = { version = "1", optional = true }
lru = { version = "0.16", features = ["hashbrown"], optional = true }
ratatui = { version = "0.29", default-features = false, optional = true }
termina = { version = "0.1", optional = true }

[target.'cfg(windows)'.dependencies]
os_info = { version = "3.10", default-features = false, optional = true }

[features]
default = []
windows-version = ["dep:os_info"]
convert = ["dep:anstyle", "dep:palette"]
underline-color = ["ratatui?/underline-color"]
terminfo = ["dep:termini"]
dcs-detect = ["dep:termina"]
color-cache = ["dep:lru"]
ratatui = ["dep:ratatui"]

[dev-dependencies]
anstyle-owo-colors = "2.0.4"
owo-colors = "4.2.2"
rand = "0.9.1"
rstest = "0.26.1"

[[example]]
name = "convert"
required-features = ["convert"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
