[package]
name = "termprofile"
version = "0.1.0"
edition = "2024"

[dependencies]
anstyle = { version = "1", optional = true }
palette = { version = "0.7", optional = true, default-features = false, features = [
  "std",
] }
termini = { version = "1", optional = true }
lru = { version = "0.16", features = ["hashbrown"], optional = true }
ratatui = { version = "0.29", default-features = false, optional = true }
termina = { version = "0.1", optional = true }

[target.'cfg(windows)'.dependencies]
os_info = { version = "3.10", default-features = false, optional = true }

[features]
windows-version = ["dep:os_info"]
convert = ["dep:anstyle", "dep:palette"]
terminfo = ["dep:termini"]
dcs-detect = ["dep:termina"]
color-cache = ["dep:lru"]
ratatui = ["dep:ratatui"]
ratatui-underline-color = ["ratatui/underline-color"]

[dev-dependencies]
anstyle-owo-colors = "2.0.4"
owo-colors = "4.2.2"
rand = "0.9.2"
rstest = "0.26.1"

[lints.rustdoc]
broken_intra_doc_links = "deny"

[lints.clippy]
allow_attributes = "deny"
doc_markdown = "warn"
default_trait_access = "warn"
ignored_unit_patterns = "warn"
semicolon_if_nothing_returned = "warn"
missing_fields_in_debug = "warn"
use_self = "warn"
impl_trait_in_params = "warn"
missing_panics_doc = "warn"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
redundant_closure_for_method_calls = "warn"

[[example]]
name = "convert"
required-features = ["convert", "dcs-detect"]

[[example]]
name = "detect"
required-features = ["dcs-detect"]

[[example]]
name = "override"
required-features = ["dcs-detect"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
